there has been an awakening - have you felt it?

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = ltee@program
-	name = ltee
+	name = Snoke
+	email = Snoke@oversee-preparations
 
 # git config --local include.path ../.gitconfig
